changes in game section and overall padding

--- a/index.html
+++ b/index.html
@@ -30,7 +30,6 @@
                     <div>PHOTOS</div>
                     <div>VIDEOS</div>
                     <div>WEB</div>
-                    <div>GAME</div>
                     <div>CONTACT</div>
                 </div>
             </header>
@@ -136,7 +135,7 @@
             <p>Event taken place in Fall 2022. Cold weather during the shot of the video </p>
         </section>
         <section class="video-content">
-            <h3>Summer 2020 Chalet experience</h3>
+            <h3>SUMMER 2020 CHALET EXPERIENCE</h3>
             <video src="Medias/Cameron Lake 2020.mp4" controls width="600" ></video>
             <p>Beautiful and gorgeous mid-sized chalet in Quebec countryside !</p>
         </section>
@@ -159,14 +158,6 @@
         </p>
         
     </main>
-
-
-     <!-- WEB PORTFOLIO SECTION -->
-    <main class="game">
-        <p>Place for game portfolio</p>
-        
-    </main>
-
 
     <!-- CONTACT SECTION -->
     <main class="contact">
