Adding photo portfolio link and CSS

--- a/index.html
+++ b/index.html
@@ -122,6 +122,13 @@
             <img src="Medias/Montreal Station Acadie.jpg" alt="A subway station in Montreal in a dramatic way">
             <p>A great view of the Montreal subway blue line at Acadie Station. Love the dramatic feeling !</p>
         </section>
+
+        <section class="link">
+            <h3> SO YOU HAVE REACHED THE BOTTOM OF THE PAGE.</h3>
+            <h4> If you like it, you can click on the link below to checkout my whole photo portfolio.</h4>
+            <a href="https://cmaisonneuveqcca-my.sharepoint.com/:f:/g/personal/e2053322_cmaisonneuve_qc_ca/EiBS4_20PG9Plryu4iLzhQMBQBlzl-YHfnml4YOpBB0TRQ?e=Nb1Jc4"> JANNE'S PHOTO PORTFOLIO </a>
+            <h4> The link will be expired in 120 days on Dec 16 2023</h4>
+        </section>
     </main>
     
 
