Small link change

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
         <section class="link">
             <h3> SO YOU HAVE REACHED THE BOTTOM OF THE PAGE.</h3>
             <h4> If you like it, you can click on the link below to checkout my whole photo portfolio.</h4>
-            <a href="https://cmaisonneuveqcca-my.sharepoint.com/:f:/g/personal/e2053322_cmaisonneuve_qc_ca/EiBS4_20PG9Plryu4iLzhQMBQBlzl-YHfnml4YOpBB0TRQ?e=Nb1Jc4"> JANNE'S PHOTO PORTFOLIO </a>
+            <a href="#"> JANNE'S PHOTO PORTFOLIO </a>
             <h4> The link will be expired in 120 days on Dec 16 2023</h4>
         </section>
     </main>
@@ -150,7 +150,7 @@
         <section class="link">
             <h3> END OF THE VIDEO HIGHLIGHT !</h3>
             <h4> The link below will lead you to the video portfolio.</h4>
-            <a href="https://cmaisonneuveqcca-my.sharepoint.com/:f:/g/personal/e2053322_cmaisonneuve_qc_ca/Eg40pDDpWMFFnumS8nTObqUBWI6fpwSAReyFaSWtdq_hSQ?e=BUpTgr"> JANNE'S VIDEO PORTFOLIO </a>
+            <a href="#"> JANNE'S VIDEO PORTFOLIO </a>
             <h4> Expire on Dec 16 2023</h4>
         </section>
        
